cmake_minimum_required(VERSION 3.20)

project(Bomb VERSION 1.0.0)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

set(REQUIRED_QT_MODULES Network)

find_package(Qt5 REQUIRED COMPONENTS ${REQUIRED_QT_MODULES})

add_subdirectory(src)